--- a/TodoList/TodoList.csproj
+++ b/TodoList/TodoList.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Domain\" />
+    <Folder Include="Features\" />
+    <Folder Include="Infraestructure\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
