--- a/TodoList/appsettings.json
+++ b/TodoList/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=TodoList;Integrated Security=True"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
